--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -6,8 +6,8 @@
   "description": "TrapParty's online version.",
   "packageManager": "pnpm@7.17.0",
   "scripts": {
-    "dev": "nuxi dev",
-    "build": "nuxi build",
+    "dev": "NODE_OPTIONS=--openssl-legacy-provider nuxi dev",
+    "build": "NODE_OPTIONS=--openssl-legacy-provider nuxi build",
     "start": "node .output/server/index.mjs",
     "lint": "pnpm lint:js && pnpm lint:style",
     "lint:js": "eslint --ext .js,.ts,.vue --ignore-path .gitignore .",
@@ -38,7 +38,7 @@
     "consola": "2.15.3",
     "cookie": "0.5.0",
     "core-js": "3.26.1",
-    "graphql": "16.6.0",
+    "graphql": "15.8.0",
     "js-cookie": "3.0.1",
     "lodash.merge": "4.6.2",
     "node-fetch": "3.3.0",
@@ -56,7 +56,7 @@
     "@babel/plugin-proposal-numeric-separator": "7.18.6",
     "@babel/runtime-corejs3": "7.20.1",
     "@nuxt/babel-preset-app": "2.15.8",
-    "@nuxt/bridge": "npm:@nuxt/bridge-edge",
+    "@nuxt/bridge": "npm:@nuxt/bridge-edge@3.0.0-27778503.de9e5c2",
     "@nuxtjs/eslint-config-typescript": "11.0.0",
     "@nuxtjs/eslint-module": "3.1.0",
     "@nuxtjs/fontawesome": "1.1.2",
@@ -69,9 +69,10 @@
     "@types/lodash.merge": "4.6.7",
     "@types/node": "18.11.9",
     "@types/vuelidate": "0.7.15",
-    "@vue/cli-shared-utils": "5.0.8",
+    "@vue/cli-shared-utils": "4.5.19",
     "autoprefixer": "10.4.13",
     "babel-eslint": "10.1.0",
+    "buffer": "6.0.3",
     "eslint": "8.28.0",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-nuxt": "4.0.0",
@@ -88,6 +89,7 @@
     "stylelint-config-standard": "29.0.0",
     "tailwindcss": "3.2.4",
     "typescript": "4.9.3",
+    "vuex": "3.6.2",
     "webpack": "4.46.0"
   }
 }
