--- a/.dockerignore
+++ b/.dockerignore
@@ -1,12 +1,24 @@
-# Created by https://www.toptal.com/developers/gitignore/api/node
-# Edit at https://www.toptal.com/developers/gitignore?templates=node
-# UNUSED PROPERTIES REMOVED!
-
 # Dependency directories
-nuxt/node_modules/
+**/node_modules/
 
 # Nuxt.js build / generate output
 nuxt/.nuxt
-nuxt/dist
+nuxt/.output
 
-# End of https://www.toptal.com/developers/gitignore/api/node
+# Git
+**/!.gitkeep
+
+# Environment variables
+**/.env
+
+# ESLint
+**/.eslintcache
+
+# Cypress
+**/cypress/results
+**/cypress/reports
+**/cypress/screenshots
+**/cypress/snapshots/actual
+**/cypress/snapshots/diff
+**/cypress/snapshots/result
+**/cypress/videos
