--- a/.github/workflows/release-schedule.yml
+++ b/.github/workflows/release-schedule.yml
@@ -13,4 +13,4 @@ jobs:
       GH_TOKEN: ${{ secrets.GH_TOKEN }}
     with:
       IS_DEBOUNCED: ${{ github.event_name != 'workflow_dispatch' }}
-      PACKAGE_JSON_PATH: 'nuxt/package.json'
+      PACKAGE_JSON_PATH: nuxt/package.json
