--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -4,14 +4,20 @@
   "version": "2.7.0",
   "scheduleVersion": "2.6.23",
   "description": "TrapParty's online version.",
+  "type": "module",
+  "engines": {
+    "node": "19"
+  },
   "packageManager": "pnpm@7.17.0",
   "scripts": {
-    "dev": "NODE_OPTIONS=--openssl-legacy-provider nuxi dev",
-    "build": "NODE_OPTIONS=--openssl-legacy-provider nuxi build",
+    "dev": "nuxt dev",
+    "build": "nuxt build",
     "start": "node .output/server/index.mjs",
-    "lint": "pnpm lint:js && pnpm lint:style",
-    "lint:js": "eslint --ext .js,.ts,.vue --ignore-path .gitignore .",
+    "lint:js": "eslint --cache --ext .js,.ts,.vue --ignore-path .gitignore .",
+    "lint:ts": "pnpm nuxt typecheck",
     "lint:style": "stylelint **/*.{vue,css} --ignore-path .gitignore",
+    "lint:fix": "pnpm lint:js --fix && pnpm lint:ts --fix && pnpm lint:style --fix",
+    "lint:quiet": "pnpm lint:js --quiet && pnpm lint:style --quiet",
     "lint:staged": "pnpm lint-staged",
     "cypress:open": "cypress open",
     "cypress:test": "cypress run --env type=actual",
@@ -23,86 +29,76 @@
     "test:integration:docker:dev": "pnpm test:integration:docker:br pnpm test:integration:dev",
     "test:integration:docker:prod": "pnpm test:integration:docker:br pnpm test:integration:prod"
   },
-  "lint-staged": {
-    "*.{js,vue}": "eslint",
-    "*.{css,vue}": "stylelint"
-  },
-  "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "6.2.1",
-    "@fortawesome/free-brands-svg-icons": "6.2.1",
-    "@fortawesome/free-solid-svg-icons": "6.2.1",
-    "@fortawesome/vue-fontawesome": "2.0.9",
-    "@funken-studio/sitemap-nuxt-3": "4.0.4",
-    "@http-util/status-i18n": "0.6.2",
-    "@nuxt/types-edge": "2.16.0-27720022.54e852f",
-    "@nuxtjs/apollo": "4.0.1-rc.5",
-    "@nuxtjs/i18n": "7.3.0",
-    "@nuxtjs/robots": "3.0.0",
-    "apollo-cache-inmemory": "1.6.6",
-    "apollo-client": "2.6.10",
-    "apollo-link": "1.2.14",
-    "chart.js": "3.9.1",
-    "color": "4.2.3",
-    "compression-with-brotli": "1.7.5",
-    "consola": "2.15.3",
-    "cookie": "0.5.0",
-    "core-js": "3.26.1",
-    "graphql": "15.8.0",
-    "js-cookie": "3.0.1",
-    "lodash.merge": "4.6.2",
-    "node-fetch": "3.3.0",
-    "nuxt-edge": "2.16.0-27720022.54e852f",
-    "nuxt-helmet": "3.0.0",
-    "rainbowvis.js": "1.1.1",
-    "vue": "2.7.14",
-    "vue-chartjs": "4.1.2",
-    "vue-sweetalert2": "5.0.5",
-    "vuelidate": "0.7.7",
-    "vuex-persistedstate": "4.1.0"
-  },
   "devDependencies": {
     "@babel/core": "7.20.2",
-    "@babel/plugin-proposal-numeric-separator": "7.18.6",
-    "@babel/runtime-corejs3": "7.20.1",
-    "@nuxt/babel-preset-app": "2.15.8",
-    "@nuxt/bridge": "npm:@nuxt/bridge-edge@3.0.0-27778503.de9e5c2",
+    "@funken-studio/sitemap-nuxt-3": "4.0.4",
+    "@graphql-codegen/cli": "2.14.1",
+    "@graphql-codegen/typescript": "2.8.2",
+    "@graphql-codegen/typescript-operations": "2.5.7",
+    "@graphql-codegen/typescript-urql-graphcache": "2.4.3",
+    "@graphql-codegen/typescript-vue-urql": "2.3.6",
+    "@graphql-codegen/urql-introspection": "2.2.1",
+    "@http-util/status-i18n": "0.6.2",
     "@nuxtjs/eslint-config-typescript": "11.0.0",
-    "@nuxtjs/eslint-module": "3.1.0",
-    "@nuxtjs/fontawesome": "1.1.2",
     "@nuxtjs/html-validator": "1.1.1",
-    "@nuxtjs/moment": "1.6.1",
-    "@nuxtjs/stylelint-module": "4.1.0",
-    "@types/color": "3.0.3",
-    "@types/js-cookie": "3.0.2",
-    "@types/jsonwebtoken": "8.5.9",
+    "@nuxtjs/i18n": "npm:@nuxtjs/i18n-edge@8.0.0-beta.1-27775490.1ee240a",
+    "@nuxtjs/robots": "3.0.0",
+    "@nuxtjs/sitemap": "2.4.0",
+    "@rollup/plugin-graphql": "1.1.0",
+    "@tailwindcss/forms": "0.5.3",
+    "@tailwindcss/line-clamp": "0.4.2",
+    "@tailwindcss/typography": "0.5.8",
+    "@types/cookie": "0.5.1",
     "@types/lodash.merge": "4.6.7",
     "@types/node": "18.11.9",
-    "@types/vuelidate": "0.7.15",
-    "@vue/cli-shared-utils": "5.0.8",
+    "@urql/core": "3.0.5",
+    "@urql/devtools": "2.0.3",
+    "@urql/exchange-graphcache": "5.0.5",
+    "@urql/vue": "1.0.2",
+    "@vuelidate/core": "2.0.0",
+    "@vuelidate/validators": "2.0.0",
     "autoprefixer": "10.4.13",
-    "babel-eslint": "10.1.0",
-    "buffer": "6.0.3",
+    "chart.js": "4.0.1",
+    "color": "4.2.3",
+    "consola": "2.15.3",
+    "cookie": "0.5.0",
     "cross-env": "7.0.3",
     "cypress": "11.2.0",
     "cypress-visual-regression": "1.7.0",
+    "dayjs": "2.0.0-alpha.4",
+    "defu": "6.1.1",
     "eslint": "8.28.0",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-nuxt": "4.0.0",
     "eslint-plugin-prettier": "4.2.1",
+    "eslint-plugin-yml": "1.2.0",
+    "graphql": "16.6.0",
     "graphql-tag": "2.12.6",
+    "jose": "4.11.1",
     "lint-staged": "13.0.4",
+    "lodash.merge": "4.6.2",
+    "nuxt": "3.0.0",
     "postcss": "8.4.19",
     "postcss-html": "1.5.0",
     "prettier": "2.8.0",
     "prettier-plugin-tailwindcss": "0.2.0",
+    "rainbowvis.js": "1.1.1",
+    "rollup": "2.79.1",
     "start-server-and-test": "1.14.0",
     "stylelint": "14.15.0",
     "stylelint-config-prettier": "9.0.4",
     "stylelint-config-recommended-vue": "1.4.0",
     "stylelint-config-standard": "29.0.0",
+    "sweetalert2": "11.6.14",
     "tailwindcss": "3.2.4",
+    "ts-node": "10.9.1",
     "typescript": "4.9.3",
-    "vuex": "3.6.2",
-    "webpack": "4.46.0"
+    "vue": "3.2.45",
+    "vue-chartjs": "4.1.2",
+    "webpack": "5.75.0"
+  },
+  "lint-staged": {
+    "*.{js,vue}": "eslint",
+    "*.{css,vue}": "stylelint"
   }
 }
