--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -13,6 +13,7 @@
     "dev": "nuxt dev",
     "build": "nuxt build",
     "start": "node .output/server/index.mjs",
+    "lint": "pnpm lint:js && pnpm lint:ts && pnpm lint:style",
     "lint:js": "eslint --cache --ext .js,.ts,.vue --ignore-path .gitignore .",
     "lint:ts": "pnpm nuxt typecheck",
     "lint:style": "stylelint **/*.{vue,css} --ignore-path .gitignore",
@@ -27,7 +28,8 @@
     "test:integration:docker:run": "docker run --rm --entrypoint docker-entrypoint.sh -v \"$PWD:/srv/app\" test-integration_base",
     "test:integration:docker:br": "pnpm test:integration:docker:build && pnpm test:integration:docker:run",
     "test:integration:docker:dev": "pnpm test:integration:docker:br pnpm test:integration:dev",
-    "test:integration:docker:prod": "pnpm test:integration:docker:br pnpm test:integration:prod"
+    "test:integration:docker:prod": "pnpm test:integration:docker:br pnpm test:integration:prod",
+    "gql:codegen": "NODE_TLS_REJECT_UNAUTHORIZED=0 graphql-codegen --config codegen.yml"
   },
   "devDependencies": {
     "@babel/core": "7.20.2",
@@ -39,15 +41,18 @@
     "@graphql-codegen/typescript-vue-urql": "2.3.6",
     "@graphql-codegen/urql-introspection": "2.2.1",
     "@http-util/status-i18n": "0.6.2",
+    "@intlify/eslint-plugin-vue-i18n": "2.0.0",
     "@nuxtjs/eslint-config-typescript": "11.0.0",
     "@nuxtjs/html-validator": "1.1.1",
     "@nuxtjs/i18n": "npm:@nuxtjs/i18n-edge@8.0.0-beta.1-27775490.1ee240a",
     "@nuxtjs/robots": "3.0.0",
     "@nuxtjs/sitemap": "2.4.0",
+    "@pinia/nuxt": "0.4.6",
     "@rollup/plugin-graphql": "1.1.0",
     "@tailwindcss/forms": "0.5.3",
     "@tailwindcss/line-clamp": "0.4.2",
     "@tailwindcss/typography": "0.5.8",
+    "@types/color": "3.0.3",
     "@types/cookie": "0.5.1",
     "@types/lodash.merge": "4.6.7",
     "@types/node": "18.11.9",
@@ -57,6 +62,7 @@
     "@urql/vue": "1.0.2",
     "@vuelidate/core": "2.0.0",
     "@vuelidate/validators": "2.0.0",
+    "@vueuse/core": "9.6.0",
     "autoprefixer": "10.4.13",
     "chart.js": "4.0.1",
     "color": "4.2.3",
@@ -78,6 +84,7 @@
     "lint-staged": "13.0.4",
     "lodash.merge": "4.6.2",
     "nuxt": "3.0.0",
+    "pinia": "2.0.27",
     "postcss": "8.4.19",
     "postcss-html": "1.5.0",
     "prettier": "2.8.0",
