--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -22,6 +22,7 @@
     "lint:staged": "pnpm lint-staged",
     "cypress:open": "cypress open",
     "cypress:test": "cypress run --env type=actual",
+    "test": "pnpm test:integration:prod",
     "test:integration:dev": "cross-env WAIT_ON_TIMEOUT=100000 start-server-and-test 'pnpm nuxi dev' 'http://localhost:3000/privacy-policy' 'pnpm cypress:test'",
     "test:integration:prod": "cross-env WAIT_ON_TIMEOUT=10000 NODE_ENV=production start-server-and-test 'pnpm start' 'http://localhost:3000/privacy-policy' 'pnpm cypress:test'",
     "test:integration:docker:build": "docker build -t test-integration_base --build-arg UID=$(id -u) --build-arg GID=$(id -g) --target test-integration_base ../",
@@ -32,9 +33,9 @@
     "gql:codegen": "NODE_TLS_REJECT_UNAUTHORIZED=0 graphql-codegen --config codegen.yml"
   },
   "devDependencies": {
-    "@babel/core": "7.20.2",
+    "@babel/core": "7.20.5",
     "@funken-studio/sitemap-nuxt-3": "4.0.4",
-    "@graphql-codegen/cli": "2.14.1",
+    "@graphql-codegen/cli": "2.15.0",
     "@graphql-codegen/typescript": "2.8.2",
     "@graphql-codegen/typescript-operations": "2.5.7",
     "@graphql-codegen/typescript-urql-graphcache": "2.4.3",
@@ -42,9 +43,10 @@
     "@graphql-codegen/urql-introspection": "2.2.1",
     "@http-util/status-i18n": "0.6.2",
     "@intlify/eslint-plugin-vue-i18n": "2.0.0",
-    "@nuxtjs/eslint-config-typescript": "11.0.0",
-    "@nuxtjs/html-validator": "1.1.1",
-    "@nuxtjs/i18n": "npm:@nuxtjs/i18n-edge@8.0.0-beta.1-27775490.1ee240a",
+    "@nuxtjs/color-mode": "3.2.0",
+    "@nuxtjs/eslint-config-typescript": "12.0.0",
+    "@nuxtjs/html-validator": "1.2.0",
+    "@nuxtjs/i18n": "npm:@nuxtjs/i18n-edge@8.0.0-beta.6-27829608.54a157b",
     "@nuxtjs/robots": "3.0.0",
     "@nuxtjs/sitemap": "2.4.0",
     "@pinia/nuxt": "0.4.6",
@@ -55,7 +57,7 @@
     "@types/color": "3.0.3",
     "@types/cookie": "0.5.1",
     "@types/lodash.merge": "4.6.7",
-    "@types/node": "18.11.9",
+    "@types/node": "18.11.10",
     "@urql/core": "3.0.5",
     "@urql/devtools": "2.0.3",
     "@urql/exchange-graphcache": "5.0.5",
@@ -80,6 +82,8 @@
     "eslint-plugin-yml": "1.2.0",
     "graphql": "16.6.0",
     "graphql-tag": "2.12.6",
+    "h3": "1.0.1",
+    "is-https": "4.0.0",
     "jose": "4.11.1",
     "lint-staged": "13.0.4",
     "lodash.merge": "4.6.2",
@@ -96,13 +100,12 @@
     "stylelint-config-prettier": "9.0.4",
     "stylelint-config-recommended-vue": "1.4.0",
     "stylelint-config-standard": "29.0.0",
-    "sweetalert2": "11.6.14",
+    "sweetalert2": "11.6.15",
     "tailwindcss": "3.2.4",
     "ts-node": "10.9.1",
     "typescript": "4.9.3",
     "vue": "3.2.45",
-    "vue-chartjs": "4.1.2",
-    "webpack": "5.75.0"
+    "vue-chartjs": "4.1.2"
   },
   "lint-staged": {
     "*.{js,vue}": "eslint",
