fix(renovate): add master to base branches

--- a/renovate.json
+++ b/renovate.json
@@ -1,5 +1,5 @@
 {
-  "baseBranches": ["alpha", "beta"],
+  "baseBranches": ["alpha", "beta", "master"],
   "extends": [
     "github>dargmuesli/renovate-config"
   ],
