--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -58,6 +58,7 @@
     "@tailwindcss/typography": "0.5.8",
     "@types/color": "3.0.3",
     "@types/cookie": "0.5.1",
+    "@types/lodash-es": "4.17.6",
     "@types/lodash.merge": "4.6.7",
     "@types/node": "18.11.15",
     "@urql/core": "3.1.1",
@@ -88,6 +89,7 @@
     "is-https": "4.0.0",
     "jose": "4.11.1",
     "lint-staged": "13.1.0",
+    "lodash-es": "4.17.21",
     "lodash.merge": "4.6.2",
     "nuxt": "3.0.0",
     "pinia": "2.0.28",
@@ -107,7 +109,8 @@
     "ts-node": "10.9.1",
     "typescript": "4.9.4",
     "vue": "3.2.45",
-    "vue-chartjs": "5.0.1"
+    "vue-chartjs": "5.0.1",
+    "vue-tsc": "1.0.13"
   },
   "pnpm": {
     "peerDependencyRules": {
