--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -51,6 +51,7 @@
     "@nuxtjs/i18n": "npm:@nuxtjs/i18n-edge@8.0.0-beta.7-27847653.226e24b",
     "@nuxtjs/robots": "3.0.0",
     "@nuxtjs/sitemap": "2.4.0",
+    "@pinia-plugin-persistedstate/nuxt": "1.0.0",
     "@pinia/nuxt": "0.4.6",
     "@rollup/plugin-graphql": "2.0.2",
     "@tailwindcss/forms": "0.5.3",
@@ -67,7 +68,6 @@
     "@urql/vue": "1.0.4",
     "@vuelidate/core": "2.0.0",
     "@vuelidate/validators": "2.0.0",
-    "@vueuse/core": "9.6.0",
     "autoprefixer": "10.4.13",
     "chart.js": "4.0.1",
     "color": "4.2.3",
@@ -86,6 +86,7 @@
     "graphql": "16.6.0",
     "graphql-tag": "2.12.6",
     "h3": "1.0.2",
+    "i": "0.3.7",
     "is-https": "4.0.0",
     "jose": "4.11.1",
     "lint-staged": "13.1.0",
@@ -93,6 +94,7 @@
     "lodash.merge": "4.6.2",
     "nuxt": "3.0.0",
     "pinia": "2.0.28",
+    "pnpm": "7.18.2",
     "postcss": "8.4.20",
     "postcss-html": "1.5.0",
     "prettier": "2.8.1",
