--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -31,7 +31,7 @@
     "test:integration:docker:dev": "pnpm test:integration:docker:br pnpm test:integration:dev",
     "test:integration:docker:prod": "pnpm test:integration:docker:br pnpm test:integration:prod",
     "gql:codegen": "NODE_TLS_REJECT_UNAUTHORIZED=0 graphql-codegen --config .codegenrc",
-    "postinstall": "pnpm nuxt prepare"
+    "prepare": "pnpm nuxt prepare"
   },
   "devDependencies": {
     "@babel/core": "7.20.7",
