--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -113,6 +113,7 @@
     "typescript": "4.9.4",
     "vue": "3.2.45",
     "vue-chartjs": "5.1.0",
+    "vue-gtag": "2.0.1",
     "vue-tsc": "1.0.22"
   },
   "pnpm": {
