--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -100,7 +100,7 @@
     "prettier": "2.8.3",
     "prettier-plugin-tailwindcss": "0.2.2",
     "rainbowvis.js": "1.1.1",
-    "rollup": "2.79.1",
+    "rollup": "3.11.0",
     "start-server-and-test": "1.15.3",
     "stylelint": "14.16.1",
     "stylelint-config-prettier": "9.0.4",
@@ -119,6 +119,7 @@
   "pnpm": {
     "peerDependencyRules": {
       "ignoreMissing": [
+        "cosmiconfig-toml-loader",
         "webpack"
       ]
     }
