ci(docker): deploy to cloudflare pages

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -3,19 +3,31 @@ name: Docker
 on:
   pull_request:
   push:
+  release:
+    types: [published]
 
 jobs:
   build:
     name: Build
-    uses: dargmuesli/github-actions/.github/workflows/docker.yml@0.28.8
+    uses: dargmuesli/github-actions/.github/workflows/docker3.yml@0.28.8
     secrets:
       DOCKER_HUB_ACCESS_TOKEN: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
       DOCKER_HUB_USER_NAME: ${{ secrets.DOCKER_HUB_USER_NAME }}
+    with:
+      ARTIFACT_PATH: .output/public
   release-semantic:
     needs: build
     name: Release (semantic)
     uses: dargmuesli/github-actions/.github/workflows/release-semantic.yml@0.28.8
     secrets:
       GH_TOKEN: ${{ secrets.GH_TOKEN }}
+  deploy:
+    needs: build
+    name: Deploy
+    uses: dargmuesli/github-actions/.github/workflows/deploy-cloudflare-pages.yml@0.28.8
+    secrets:
+      CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
     with:
-      CACHE_PATH: nuxt/pnpm-lock.yaml
+      ACCOUNT_ID: f00135e2a8cc575a4bc4817c9521fe71
+      BRANCH: ${{ github.ref_name }}
+      PROJECT_NAME: trapparty
