--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -115,6 +115,10 @@
     "vue-tsc": "1.1.7"
   },
   "pnpm": {
+    "overrides": {
+      "@intlify/devtools-if": "9.3.0-beta.16",
+      "@intlify/message-compiler": "9.3.0-beta.16"
+    },
     "peerDependencyRules": {
       "ignoreMissing": [
         "cosmiconfig-toml-loader",
