--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -21,7 +21,7 @@
     "lint:quiet": "pnpm lint:js --quiet && pnpm lint:style --quiet",
     "lint:staged": "pnpm lint-staged",
     "cypress:open": "cypress open",
-    "cypress:test": "cypress run --env type=actual",
+    "cypress:test": "./cypress/snapshots/test.sh",
     "test": "pnpm test:integration:prod",
     "test:integration:dev": "cross-env NUXT_PUBLIC_IS_TESTING=1 WAIT_ON_TIMEOUT=100000 start-server-and-test 'pnpm dev' 'http://localhost:3000/privacy-policy' 'pnpm cypress:test'",
     "test:integration:prod": "cross-env NUXT_PUBLIC_IS_TESTING=1 WAIT_ON_TIMEOUT=10000 NODE_ENV=production start-server-and-test 'pnpm start' 'http://localhost:3000/privacy-policy' 'pnpm cypress:test'",
