--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -5,9 +5,8 @@
   "description": "TrapParty's online version.",
   "type": "module",
   "engines": {
-    "node": "18"
+    "node": "20"
   },
-  "packageManager": "pnpm@8.3.1",
   "scripts": {
     "dev": "nuxt dev",
     "build": "nuxt build",
@@ -45,7 +44,7 @@
     "@nuxtjs/color-mode": "3.2.0",
     "@nuxtjs/eslint-config-typescript": "12.0.0",
     "@nuxtjs/html-validator": "1.2.5",
-    "@nuxtjs/i18n": "npm:@nuxtjs/i18n-edge@8.0.0-beta.9-27948515.3db6367",
+    "@nuxtjs/i18n": "8.0.0-beta.10",
     "@nuxtjs/robots": "3.0.0",
     "@nuxtjs/sitemap": "2.4.0",
     "@pinia-plugin-persistedstate/nuxt": "1.1.1",
