--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "devDependencies": {
     "@commitlint/cli": "17.6.1",
     "@commitlint/config-conventional": "17.6.1",
-    "husky": "8.0.3",
-    "shx": "0.3.4"
+    "husky": "8.0.3"
+  },
+  "scripts": {
+    "prepare": "husky install"
   }
 }
