--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -102,5 +102,8 @@
     "vue-chartjs": "5.2.0",
     "vue-gtag": "2.0.1",
     "vue-tsc": "1.8.4"
+  },
+  "peerDependencies": {
+    "playwright-core": "1.36.0"
   }
 }
