--- a/src/package.json
+++ b/src/package.json
@@ -34,7 +34,6 @@
     "@axe-core/playwright": "4.7.3",
     "@babel/core": "7.22.9",
     "@dargmuesli/nuxt-cookie-control": "6.1.5",
-    "@funken-studio/sitemap-nuxt-3": "4.0.4",
     "@graphql-codegen/cli": "5.0.0",
     "@graphql-codegen/client-preset": "4.1.0",
     "@graphql-codegen/typescript-urql-graphcache": "2.4.5",
@@ -45,8 +44,6 @@
     "@nuxtjs/eslint-config-typescript": "12.0.0",
     "@nuxtjs/html-validator": "1.5.2",
     "@nuxtjs/i18n": "8.0.0-rc.1",
-    "@nuxtjs/robots": "3.0.0",
-    "@nuxtjs/sitemap": "2.4.0",
     "@pinia-plugin-persistedstate/nuxt": "1.1.1",
     "@pinia/nuxt": "0.4.11",
     "@playwright/test": "1.36.2",
@@ -83,8 +80,8 @@
     "lodash-es": "4.17.21",
     "lodash.merge": "4.6.2",
     "nuxt": "3.6.5",
+    "nuxt-seo-kit-module": "2.0.0-beta.9",
     "pinia": "2.1.6",
-    "pnpm": "8.6.11",
     "postcss": "8.4.27",
     "postcss-html": "1.5.0",
     "prettier": "3.0.0",
