--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
     "eslint.workingDirectories": [
         {
-            "directory": "src" // needed to correctly lint global locale strings like `t('globalShowMore')`
+            "directory": "src" // needed to correctly lint global locale strings like `t('globalStatusLoading')`
         }
     ]
 }
