--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,33 +1,31 @@
 {
-    "css.validate": false,
-    "eslint.workingDirectories": [
-      {
-        "directory": "src" // needed to correctly lint global locale strings like `t('globalStatusLoading')`
-      }
-    ],
-    "shellcheck.customArgs": [
-      "-x"
-    ],
-    "stylelint.validate": [
-      "css",
-      "vue"
-    ],
-    "[css]": {
-      "editor.defaultFormatter": "esbenp.prettier-vscode"
-    },
-    "[javascript]": {
-      "editor.defaultFormatter": "esbenp.prettier-vscode"
-    },
-    "[json]": {
-      "editor.defaultFormatter": "esbenp.prettier-vscode"
-    },
-    "[typescript]": {
-      "editor.defaultFormatter": "esbenp.prettier-vscode"
-    },
-    "[vue]": {
-      "editor.defaultFormatter": "esbenp.prettier-vscode"
-    },
-    "[yaml]": {
-      "editor.defaultFormatter": "esbenp.prettier-vscode"
+  "css.validate": false,
+  "eslint.workingDirectories": [
+    {
+      "directory": "src" // needed to correctly lint global locale strings like `t('globalStatusLoading')`
     }
+  ],
+  "shellcheck.customArgs": ["-x"],
+  "stylelint.validate": ["css", "vue"],
+  "[css]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[javascript]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[json]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[jsonc]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[typescript]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[vue]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[yaml]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
   }
+}
