--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "devDependencies": {
     "@commitlint/cli": "17.7.1",
     "@commitlint/config-conventional": "17.7.0",
+    "conventional-changelog-conventionalcommits": "7.0.1",
     "husky": "8.0.3"
   },
   "scripts": {
