--- a/.dockerignore
+++ b/.dockerignore
@@ -4,7 +4,7 @@ src/.nuxt/
 src/.output/
 src/dist/
 src/node_modules/
-src/tsts/e2e/report/
-src/tsts/e2e/results/
+src/tests/e2e/report/
+src/tests/e2e/results/
 src/.env
 src/.eslintcache
