--- a/src/package.json
+++ b/src/package.json
@@ -40,47 +40,20 @@
     "test:e2e": "playwright test"
   },
   "devDependencies": {
-    "@axe-core/playwright": "4.7.3",
-    "@dargmuesli/nuxt-vio": "4.0.2",
+    "@dargmuesli/nuxt-vio": "4.0.3",
     "@graphql-codegen/cli": "5.0.0",
     "@graphql-codegen/client-preset": "4.1.0",
     "@graphql-codegen/typescript-urql-graphcache": "2.4.5",
     "@graphql-codegen/urql-introspection": "2.2.1",
-    "@intlify/eslint-plugin-vue-i18n": "3.0.0-next.3",
-    "@nuxtjs/eslint-config-typescript": "12.1.0",
     "@pinia-plugin-persistedstate/nuxt": "1.1.1",
-    "@playwright/test": "1.37.1",
     "@types/color": "3.0.4",
-    "@types/lodash-es": "4.17.9",
-    "@types/node": "20.6.0",
-    "@urql/core": "4.1.2",
-    "@urql/devtools": "2.0.3",
-    "@urql/exchange-graphcache": "6.3.3",
-    "@urql/vue": "1.1.2",
     "chart.js": "4.4.0",
     "color": "4.2.3",
     "consola": "3.2.3",
     "defu": "6.1.2",
-    "eslint": "8.49.0",
-    "eslint-config-prettier": "9.0.0",
-    "eslint-plugin-compat": "4.2.0",
-    "eslint-plugin-nuxt": "4.0.0",
-    "eslint-plugin-prettier": "5.0.0",
-    "eslint-plugin-yml": "1.9.0",
     "h3": "1.8.1",
-    "lint-staged": "14.0.1",
-    "lodash-es": "4.17.21",
-    "nuxt": "3.7.2",
-    "prettier": "3.0.3",
-    "prettier-plugin-tailwindcss": "0.5.4",
     "rainbowvis.js": "1.1.1",
-    "stylelint": "15.10.3",
-    "stylelint-config-recommended-vue": "1.5.0",
-    "stylelint-config-standard": "34.0.0",
-    "stylelint-no-unsupported-browser-features": "7.0.0",
-    "vue": "3.3.4",
-    "vue-chartjs": "5.2.0",
-    "vue-tsc": "1.8.11"
+    "vue-chartjs": "5.2.0"
   },
   "peerDependencies": {
     "playwright-core": "1.37.1"
