--- a/package.json
+++ b/package.json
@@ -12,5 +12,10 @@
   },
   "scripts": {
     "prepare": "husky install"
+  },
+  "pnpm": {
+    "overrides": {
+      "nuxt": "3.7.1"
+    }
   }
 }
