--- a/src/package.json
+++ b/src/package.json
@@ -40,19 +40,42 @@
     "test:e2e": "playwright test"
   },
   "devDependencies": {
-    "@dargmuesli/nuxt-vio": "8.2.4",
+    "@dargmuesli/nuxt-cookie-control": "7.0.1",
+    "@dargmuesli/nuxt-vio": "8.3.3",
     "@graphql-codegen/cli": "5.0.0",
     "@graphql-codegen/client-preset": "4.1.0",
     "@graphql-codegen/typescript-urql-graphcache": "3.0.0",
     "@graphql-codegen/urql-introspection": "3.0.0",
+    "@graphql-typed-document-node/core": "3.2.0",
+    "@nuxtjs/i18n": "npm:@nuxtjs/i18n-edge@8.0.0-rc.5-28296269.d5d5540",
+    "@nuxtjs/tailwindcss": "6.8.0",
     "@pinia-plugin-persistedstate/nuxt": "1.1.2",
+    "@pinia/nuxt": "0.5.1",
+    "@playwright/test": "1.39.0",
     "@types/color": "3.0.5",
+    "@types/lodash-es": "4.17.10",
+    "@unhead/vue": "1.7.4",
+    "@urql/core": "4.1.4",
+    "@urql/devtools": "2.0.3",
+    "@urql/exchange-graphcache": "6.3.3",
+    "@urql/vue": "1.1.2",
+    "@vuelidate/core": "2.0.3",
+    "@vuelidate/validators": "2.0.4",
     "chart.js": "4.4.0",
     "color": "4.2.3",
     "consola": "3.2.3",
     "defu": "6.1.2",
+    "graphql": "16.8.1",
     "h3": "1.8.2",
+    "jiti": "1.20.0",
+    "lint-staged": "15.0.2",
+    "lodash-es": "4.17.21",
+    "nuxt": "3.8.0",
+    "playwright-core": "1.39.0",
     "rainbowvis.js": "1.1.1",
-    "vue-chartjs": "5.2.0"
+    "vue": "3.3.6",
+    "vue-chartjs": "5.2.0",
+    "vue-router": "4.2.5",
+    "vue-tsc": "1.8.19"
   }
 }
