--- a/src/package.json
+++ b/src/package.json
@@ -64,6 +64,7 @@
     "chart.js": "4.4.0",
     "color": "4.2.3",
     "consola": "3.2.3",
+    "cross-env": "7.0.3",
     "defu": "6.1.2",
     "graphql": "16.8.1",
     "h3": "1.8.2",
@@ -73,6 +74,8 @@
     "nuxt": "3.8.0",
     "playwright-core": "1.39.0",
     "rainbowvis.js": "1.1.1",
+    "stylelint": "15.11.0",
+    "unhead": "1.7.4",
     "vue": "3.3.6",
     "vue-chartjs": "5.2.0",
     "vue-router": "4.2.5",
