--- a/src/package.json
+++ b/src/package.json
@@ -14,6 +14,7 @@
     "build:static": "nuxt generate",
     "dev": "pnpm run start:dev",
     "generate": "pnpm run build:static",
+    "gql:codegen": "NODE_TLS_REJECT_UNAUTHORIZED=0 graphql-codegen --config .codegenrc.ts",
     "lint:fix": "pnpm run lint:js --fix && pnpm run lint:ts --fix && pnpm run lint:style --fix",
     "lint:js": "eslint --cache --ext .js,.ts,.vue --ignore-path .gitignore .",
     "lint:staged": "lint-staged",
@@ -42,8 +43,11 @@
   "devDependencies": {
     "@axe-core/playwright": "4.8.1",
     "@dargmuesli/nuxt-cookie-control": "7.1.1",
-    "@dargmuesli/nuxt-vio": "9.0.0-beta.4",
+    "@dargmuesli/nuxt-vio": "9.0.0-beta.5",
     "@graphql-codegen/cli": "5.0.0",
+    "@graphql-codegen/client-preset": "4.1.0",
+    "@graphql-codegen/typescript-urql-graphcache": "3.0.0",
+    "@graphql-codegen/urql-introspection": "3.0.0",
     "@graphql-typed-document-node/core": "3.2.0",
     "@intlify/eslint-plugin-vue-i18n": "3.0.0-next.4",
     "@nuxtjs/eslint-config-typescript": "12.1.0",
