--- a/src/package.json
+++ b/src/package.json
@@ -52,7 +52,6 @@
     "@intlify/eslint-plugin-vue-i18n": "3.0.0-next.5",
     "@nuxtjs/eslint-config-typescript": "12.1.0",
     "@nuxtjs/i18n": "8.0.1",
-    "@nuxtjs/tailwindcss": "6.11.3",
     "@pinia-plugin-persistedstate/nuxt": "1.2.0",
     "@pinia/nuxt": "0.5.1",
     "@playwright/test": "1.41.2",
@@ -88,6 +87,7 @@
     "stylelint-config-recommended-vue": "1.5.0",
     "stylelint-config-standard": "36.0.0",
     "stylelint-no-unsupported-browser-features": "8.0.1",
+    "tailwindcss": "3.4.1",
     "unhead": "1.8.10",
     "vue": "3.4.15",
     "vue-chartjs": "5.3.0",
