ci(docker): minimize by convenience scripts

--- a/package.json
+++ b/package.json
@@ -10,20 +10,27 @@
   "packageManager": "pnpm@8.15.1",
   "private": true,
   "scripts": {
-    "build": "pnpm --dir src run build:node",
-    "build:node": "nuxt --dir src run build",
-    "build:static": "nuxt --dir src run generate",
-    "dev": "pnpm --dir src run start:dev",
-    "generate": "pnpm --dir src run build:static",
+    "build": "pnpm --dir src run build",
+    "build:node": "pnpm --dir src run build:node",
+    "build:static": "pnpm --dir src run build:static",
+    "dev": "pnpm --dir src run dev",
+    "generate": "pnpm --dir src run generate",
     "prepare": "husky",
-    "start:dev": "pnpm --dir src exec nuxt dev",
-    "start:node": "node src/.output/server/index.mjs",
-    "start:static": "pnpm --dir src exec serve .output/public",
-    "test:e2e:docker:server:dev": "pnpm --dir tests run test:e2e:docker:server:dev",
-    "test:e2e:docker:server:dev:update": "pnpm --dir tests run test:e2e:docker:server:dev:update",
-    "test:e2e:docker:server:node": "pnpm --dir tests run test:e2e:docker:server:node",
-    "test:e2e:docker:server:node:update": "pnpm --dir tests run test:e2e:docker:server:node:update",
-    "test:e2e:docker:server:static": "pnpm --dir tests run test:e2e:docker:server:static",
-    "test:e2e:docker:server:static:update": "pnpm --dir tests run test:e2e:docker:server:static:update"
+    "start:dev": "pnpm --dir src run start:dev",
+    "start:node": "pnpm --dir src run start:node",
+    "start:static": "pnpm --dir src run start:static",
+    "test:e2e:docker:br": "pnpm --dir src run test:e2e:docker:br",
+    "test:e2e:docker:build": "pnpm --dir src run test:e2e:docker:build",
+    "test:e2e:docker:run": "pnpm --dir src run test:e2e:docker:run",
+    "test:e2e:docker:server:dev:update": "pnpm --dir src run test:e2e:docker:server:dev:update",
+    "test:e2e:docker:server:dev": "pnpm --dir src run test:e2e:docker:server:dev",
+    "test:e2e:docker:server:node:update": "pnpm --dir src run test:e2e:docker:server:node:update",
+    "test:e2e:docker:server:node": "pnpm --dir src run test:e2e:docker:server:node",
+    "test:e2e:docker:server:static:update": "pnpm --dir src run test:e2e:docker:server:static:update",
+    "test:e2e:docker:server:static": "pnpm --dir src run test:e2e:docker:server:static",
+    "test:e2e:server:dev": "pnpm --dir src run test:e2e:server:dev",
+    "test:e2e:server:node": "pnpm --dir src run test:e2e:server:node",
+    "test:e2e:server:static": "pnpm --dir src run test:e2e:server:static",
+    "test:e2e": "pnpm --dir src run test:e2e"
   }
 }
