--- a/src/package.json
+++ b/src/package.json
@@ -83,7 +83,6 @@
     "unhead": "1.9.10",
     "vue": "3.4.27",
     "vue-chartjs": "5.3.1",
-    "vue-router": "4.3.2",
-    "vue-tsc": "2.0.17"
+    "vue-router": "4.3.2"
   }
 }
