--- a/src/package.json
+++ b/src/package.json
@@ -49,7 +49,7 @@
     "@graphql-codegen/typescript-urql-graphcache": "3.1.0",
     "@graphql-codegen/urql-introspection": "3.0.0",
     "@graphql-typed-document-node/core": "3.2.0",
-    "@nuxtjs/i18n": "8.3.1",
+    "@nuxtjs/i18n": "8.3.0",
     "@pinia-plugin-persistedstate/nuxt": "1.2.0",
     "@pinia/nuxt": "0.5.1",
     "@playwright/test": "1.44.0",
@@ -75,6 +75,7 @@
     "prettier-plugin-tailwindcss": "0.5.14",
     "rainbowvis.js": "1.1.1",
     "serve": "14.2.3",
+    "sharp": "0.33.3",
     "stylelint": "16.5.0",
     "stylelint-config-recommended-vue": "1.5.0",
     "stylelint-config-standard": "36.0.0",
