--- a/.renovaterc
+++ b/.renovaterc
@@ -7,6 +7,10 @@
     {
       "matchPackageNames": ["@nuxtjs/i18n"],
       "allowedVersions": "8.3.0"
+    },
+    {
+      "matchPackageNames": ["typescript"],
+      "allowedVersions": "5.4.5"
     }
   ]
 }
