--- a/package.json
+++ b/package.json
@@ -41,5 +41,10 @@
     "test:e2e:server:static": "pnpm --dir src run test:e2e:server:static",
     "test:e2e": "pnpm --dir src run test:e2e"
   },
-  "type": "module"
+  "type": "module",
+  "pnpm": {
+    "overrides": {
+      "typescript": "5.4.5"
+    }
+  }
 }
