--- a/src/package.json
+++ b/src/package.json
@@ -36,6 +36,7 @@
     "stylelint-config-recommended-vue": "1.5.0",
     "stylelint-config-standard": "36.0.1",
     "stylelint-no-unsupported-browser-features": "8.0.1",
+    "sweetalert2": "11.12.4",
     "tailwindcss": "3.4.10",
     "unhead": "1.10.0",
     "vue": "3.4.38",
