--- a/.renovaterc
+++ b/.renovaterc
@@ -7,6 +7,10 @@
     {
       "matchPackageNames": ["@nuxtjs/i18n"],
       "allowedVersions": "8.3.0"
+    },
+    {
+      "matchPackageNames": ["caniuse-lite"],
+      "allowedVersions": "1.0.30001653"
     }
   ]
 }
