--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
   "type": "module",
   "pnpm": {
     "overrides": {
-      "@nuxtjs/i18n": "8.3.0"
+      "@nuxtjs/i18n": "8.3.0",
+      "caniuse-lite": "1.0.30001653"
     }
   }
 }
