chore(deps): pin @pinia/nuxt to v0.5.5

--- a/.renovaterc
+++ b/.renovaterc
@@ -2,5 +2,11 @@
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
     "github>dargmuesli/renovate-config"
+  ],
+  "packageRules": [
+    {
+      "matchPackageNames": ["@pinia/nuxt"],
+      "allowedVersions": "0.5.5"
+    }
   ]
 }
