--- a/package.json
+++ b/package.json
@@ -41,5 +41,10 @@
     "test:e2e:server:node": "pnpm --dir src run test:e2e:server:node",
     "test:e2e:server:static": "pnpm --dir src run test:e2e:server:static"
   },
+  "pnpm": {
+    "overrides": {
+      "@pinia/nuxt": "0.5.5"
+    }
+  },
   "type": "module"
 }
