chore(package): ignore built dependencies

--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
   "pnpm": {
     "ignoredBuiltDependencies": [
       "@parcel/watcher",
+      "@tailwindcss/oxide",
       "esbuild",
       "sharp",
+      "unrs-resolver",
       "vue-demi"
     ]
   },
