chore(deps): pin pnpm to v10.12.1

--- a/.renovaterc.json
+++ b/.renovaterc.json
@@ -1,6 +1,10 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": [
-    "github>dargmuesli/renovate-config"
+  "extends": ["github>dargmuesli/renovate-config"],
+  "packageRules": [
+    {
+      "matchPackageNames": ["pnpm"],
+      "allowedVersions": "10.12.1"
+    }
   ]
 }
